--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -1,3 +1,4 @@
+# .github/workflows/bookdepth-incremental.yml
 name: "5️⃣📥🛠️ bookDepth Inc. Download & Feat."
 
 on:
@@ -39,7 +40,7 @@ jobs:
       - name: Install dependencies
         run: pip install --upgrade pandas pyarrow scipy
 
-      - name: Make extractor executable
+      - name: Make extractor script executable
         run: chmod +x extract_bookDepth_features.py
 
       - name: Calc dates
@@ -52,7 +53,7 @@ jobs:
         id: resume
         run: |
           SYMBOL=${{ matrix.symbol }}
-          DIR=features/bookDepth/${SYMBOL}
+          DIR=features/bookDepth/$SYMBOL
           mkdir -p "$DIR"
           LAST=$(ls "$DIR"/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
           if [[ -n "$LAST" ]]; then
@@ -76,39 +77,36 @@ jobs:
             *)                                 INC=$SD;;
           esac
           [[ "$(date -d"$SD" +%s)" -lt "$(date -d"$INC" +%s)" ]] && SD="$INC"
-          mkdir -p raw/bookDepth/"$SYMBOL"
+          mkdir -p raw/bookDepth/$SYMBOL
           CUR="$SD"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-bookDepth-${CUR}.zip"
             if curl -sSf "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" -o "$ZIP"; then
-              unzip -q -o "$ZIP" -d raw/bookDepth/"$SYMBOL"
+              unzip -q -o "$ZIP" -d raw/bookDepth/$SYMBOL
             fi
             rm -f "$ZIP"
-            CUR=$(date -I -d "$CUR +1 day")
+            CUR=$(date -I -d "$CUR + 1 day")
           done
 
       - name: Extract only the new range into tmp
         run: |
           SYMBOL=${{ matrix.symbol }}
-          TMP="features/bookDepth/${SYMBOL}/tmp_${SYMBOL}.parquet"
+          TMP="features/bookDepth/$SYMBOL/tmp_$SYMBOL.parquet"
           python3 extract_bookDepth_features.py \
-            --input-dir raw/bookDepth/${SYMBOL} \
+            --input-dir raw/bookDepth/$SYMBOL \
             --start-date "${{ steps.resume.outputs.start }}" \
             --end-date   "${{ steps.resume.outputs.end }}" \
             --output-file "$TMP"
 
       - name: Check for new features
         id: checknew
-        env:
-          TMP: features/bookDepth/${{ matrix.symbol }}/tmp_${{ matrix.symbol }}.parquet
         run: |
+          TMP="features/bookDepth/${{ matrix.symbol }}/tmp_${{ matrix.symbol }}.parquet"
           echo "→ Checking if $TMP contains any rows"
           if [[ -f "$TMP" ]]; then
-            python3 - <<'EOF'
-import os, sys
-import pandas as pd
-
-tmp = os.environ['TMP']
+            python3 << 'EOF'
+import os, sys, pandas as pd
+tmp = os.environ["TMP"]
 df = pd.read_parquet(tmp)
 sys.exit(0 if len(df) > 0 else 1)
 EOF
@@ -125,20 +123,18 @@ EOF
           GS=${{ steps.dates.outputs.global_start }}
           NE=${{ steps.resume.outputs.end }}
           DIR=features/bookDepth/$SYMBOL
-          OUT="${DIR}/${SYMBOL}-features-${GS}_to_${NE}.parquet"
+          OUT="$DIR/${SYMBOL}-features-${GS}_to_${NE}.parquet"
           OLD=$(ls "$DIR"/${SYMBOL}-features-*.parquet | sort | tail -n1)
           NEWTMP="$DIR/tmp_${SYMBOL}.parquet"
-          echo "→ Merging $OLD + $NEWTMP → $OUT"
-          python3 - <<'EOF'
-import sys
-import pandas as pd
 
+          echo "→ Merging $OLD + $NEWTMP → $OUT"
+          python3 << 'PYCODE'
+import sys, pandas as pd
 old, new, out = sys.argv[1], sys.argv[2], sys.argv[3]
-df_old = pd.read_parquet(old)
-df_new = pd.read_parquet(new)
-df = pd.concat([df_old, df_new]).sort_index()
+df = pd.concat([pd.read_parquet(old), pd.read_parquet(new)]).sort_index()
 df.to_parquet(out, compression="snappy")
-EOF
+PYCODE
+
           rm "$OLD" "$NEWTMP"
 
       - name: Cleanup raw data
@@ -151,5 +147,5 @@ EOF
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add features/bookDepth/${{ matrix.symbol }}
-          git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${{ steps.dates.outputs.global_start }}→${{ steps.resume.outputs.end }}"
+          git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${{ steps.dates.outputs.global_start }} to ${{ steps.resume.outputs.end }}"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
