--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -40,12 +40,13 @@ jobs:
       - name: Install dependencies
         run: pip install --upgrade pandas pyarrow scipy
 
-      - name: Make extractor script executable
+      - name: Make extractor executable
         run: chmod +x extract_bookDepth_features.py
 
       - name: Calc dates
         id: dates
         run: |
+          # Global-Einstein-Start (falls kein bestehendes file da ist)
           echo "global_start=2025-01-01"       >> $GITHUB_OUTPUT
           echo "today=$(date -I -d 'yesterday')" >> $GITHUB_OUTPUT
 
@@ -55,10 +56,11 @@ jobs:
           SYMBOL=${{ matrix.symbol }}
           DIR=features/bookDepth/$SYMBOL
           mkdir -p "$DIR"
-          LAST=$(ls "$DIR"/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
+          # wenn schon Features da sind, resume Tag = letztes +1
+          LAST=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
           if [[ -n "$LAST" ]]; then
-            END_OLD=$(basename "$LAST" .parquet | sed -E 's/^.*_to_([0-9-]+)$/\1/')
-            START=$(date -I -d "$END_OLD + 1 day")
+            PREV_END=$(basename "$LAST" .parquet | sed -E 's/^.*_to_([0-9-]+)$/\1/')
+            START=$(date -I -d "$PREV_END + 1 day")
           else
             START=${{ steps.dates.outputs.global_start }}
           fi
@@ -70,6 +72,7 @@ jobs:
           SYMBOL=${{ matrix.symbol }}
           SD=${{ steps.resume.outputs.start }}
           ED=${{ steps.resume.outputs.end }}
+          # Symbol-spezielles Inception fallback
           case "$SYMBOL" in
             BTCUSDT|ETHUSDT|BNBUSDT|SOLUSDT) INC="2023-01-01";;
             XRPUSDT)                           INC="2023-01-06";;
@@ -77,75 +80,46 @@ jobs:
             *)                                 INC=$SD;;
           esac
           [[ "$(date -d"$SD" +%s)" -lt "$(date -d"$INC" +%s)" ]] && SD="$INC"
-          mkdir -p raw/bookDepth/$SYMBOL
+
+          echo "→ Downloading bookDepth from $SD to $ED"
+          RAWDIR=raw/bookDepth/$SYMBOL
+          mkdir -p "$RAWDIR"
           CUR="$SD"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-bookDepth-${CUR}.zip"
             if curl -sSf "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" -o "$ZIP"; then
-              unzip -q -o "$ZIP" -d raw/bookDepth/$SYMBOL
+              unzip -q -o "$ZIP" -d "$RAWDIR"
             fi
             rm -f "$ZIP"
             CUR=$(date -I -d "$CUR + 1 day")
           done
 
-      - name: Extract only the new range into tmp
+      - name: Extract & append (or fresh create)
         run: |
           SYMBOL=${{ matrix.symbol }}
-          TMP="features/bookDepth/$SYMBOL/tmp_$SYMBOL.parquet"
+          START=${{ steps.resume.outputs.start }}
+          END=${{ steps.resume.outputs.end }}
+          OUT=features/bookDepth/${SYMBOL}/${SYMBOL}-features-${START}_to_${END}.parquet
+          mkdir -p "$(dirname "$OUT")"
+          echo "→ Extracting & merging into $OUT"
           python3 extract_bookDepth_features.py \
-            --input-dir raw/bookDepth/$SYMBOL \
-            --start-date "${{ steps.resume.outputs.start }}" \
-            --end-date   "${{ steps.resume.outputs.end }}" \
-            --output-file "$TMP"
+            --input-dir raw/bookDepth/${SYMBOL} \
+            --start-date "$START" \
+            --end-date   "$END" \
+            --output-file "$OUT"
 
-      - name: Check for new features
-        id: checknew
-        run: |
-          TMP="features/bookDepth/${{ matrix.symbol }}/tmp_${{ matrix.symbol }}.parquet"
-          echo "→ Checking if $TMP contains any rows"
-          if [[ -f "$TMP" ]]; then
-            python3 << 'EOF'
-import os, sys, pandas as pd
-tmp = os.environ["TMP"]
-df = pd.read_parquet(tmp)
-sys.exit(0 if len(df) > 0 else 1)
-EOF
-          else
-            echo "✔️ No tmp file → nothing to append"
-            exit 1
-          fi
-        continue-on-error: true
-
-      - name: Append old + tmp & cleanup
-        if: steps.checknew.conclusion == 'success'
-        run: |
-          SYMBOL=${{ matrix.symbol }}
-          GS=${{ steps.dates.outputs.global_start }}
-          NE=${{ steps.resume.outputs.end }}
-          DIR=features/bookDepth/$SYMBOL
-          OUT="$DIR/${SYMBOL}-features-${GS}_to_${NE}.parquet"
-          OLD=$(ls "$DIR"/${SYMBOL}-features-*.parquet | sort | tail -n1)
-          NEWTMP="$DIR/tmp_${SYMBOL}.parquet"
-
-          echo "→ Merging $OLD + $NEWTMP → $OUT"
-          python3 << 'PYCODE'
-import sys, pandas as pd
-old, new, out = sys.argv[1], sys.argv[2], sys.argv[3]
-df = pd.concat([pd.read_parquet(old), pd.read_parquet(new)]).sort_index()
-df.to_parquet(out, compression="snappy")
-PYCODE
-
-          rm "$OLD" "$NEWTMP"
-
-      - name: Cleanup raw data
+      - name: Cleanup raw
         if: always()
         run: rm -rf raw/bookDepth/${{ matrix.symbol }}
 
-      - name: Commit & Push BookDepth
-        if: steps.checknew.conclusion == 'success'
+      - name: Commit & Push changes
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add features/bookDepth/${{ matrix.symbol }}
-          git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${{ steps.dates.outputs.global_start }} to ${{ steps.resume.outputs.end }}"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+          if git diff --cached --quiet; then
+            echo "✔️ No bookDepth changes for ${{ matrix.symbol }}"
+          else
+            git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${{ steps.dates.outputs.global_start }}→${{ steps.resume.outputs.end }}"
+            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+          fi
