--- a/.github/workflows/klines_features_init.yml
+++ b/.github/workflows/klines_features_init.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         symbol: [BTCUSDT, ETHUSDT, BNBUSDT, XRPUSDT, SOLUSDT, ENAUSDT]
         interval: [1m, 5m, 15m, 1h, 4h]
-      max-parallel: 1  # Bei Performance-Problemen auf 2-3 erhöhen
+      max-parallel: 1
       fail-fast: false
 
     steps:
@@ -26,11 +26,11 @@ jobs:
         run: |
           pip install "numpy<1.24"
           pip install pandas pyarrow pandas-ta --upgrade
-
-      - name: Run Klines Feature Extraction (Symbol: ${{ matrix.symbol }}, Interval: ${{ matrix.interval }})
+          
+      - name: Run Klines Feature Extraction (Symbol: ${{matrix.symbol}}, Interval: ${{matrix.interval}})
         run: |
-          python train/extract_klines_features.py --symbol ${{ matrix.symbol }} --interval ${{ matrix.interval }}
-
+          python train/extract_klines_features.py --symbol ${{matrix.symbol}} --interval ${{matrix.interval}}
+          
       - name: Commit and push features
         run: |
           git config --global user.name 'github-actions'
@@ -38,4 +38,4 @@ jobs:
           git add features/klines/${{ matrix.symbol }}/${{ matrix.interval }}/features-${{ matrix.symbol }}-${{ matrix.interval }}.parquet
           git commit -m "Features for ${{ matrix.symbol }}-${{ matrix.interval }}"
           git push
-        continue-on-error: true  # So laufen andere weiter, auch wenn einer fehlschlägt
+        continue-on-error: true
